# FlaskTask

./: .gitignore  README.md  pyproject.toml  tox.ini
flaskr/: __init__.py
flaskr/schema/: __init__.py  toast.py  user.py
flaskr/service/: __init__.py  toast.py  user.py
flaskr/view/: toast.py  toast_data.py  user.py
instance/: test_app.db
migrations/versions/: 8b1758b8def8_initial_migration.py  d82d8b3f208f_insert_example_users.py
tests/: __init__.py  test_toast.py
