[project]
name = "flaskr"
dependencies = [
    "flask"
    , "flask-sqlalchemy"
    , "flask-migrate"
    , "flask-marshmallow"
    , "flask-restx"
    , "marshmallow-sqlalchemy"
    , "marshmallow_dataclass"
    , "pytest"
    , "coverage"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["flaskr"]
